syntax = "proto3";

package mbot;

import "google/protobuf/timestamp.proto";
import "customer.proto";

message Subscription {
  string subscription_id = 1;
  string customer_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp expiration_date = 4;
}

message CreateSubscriptionRequest {
  string customer_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp expiration_date = 3;
}

message CreateSubscriptionResponse {
  string message = 1;
  Subscription subscription = 3;
}

message GetSubscriptionRequest {
  string subscription_id = 1;
}

message GetSubscriptionResponse {
  Subscription subscription = 1;
}

message UpdateSubscriptionRequest {
  string id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp expiration_date = 3;
}

message UpdateSubscriptionResponse {
  string id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp expiration_date = 3;
  google.protobuf.Timestamp updated_start_date = 4;
  google.protobuf.Timestamp updated_expiration_date = 5;
}

message DeleteSubscriptionRequest {
  string subscription_id = 1;
}

message DeleteSubscriptionResponse {
  string message = 1;
}

message GetSubscriptionsAllRequest {}

message GetSubscriptionsAllResponse {
  repeated Subscription subscriptions = 1;
}

message GetSubscriptionByCustomerRequest {
  string customer_id = 1;
}

message GetSubscriptionByCustomerResponse {
  repeated Subscription subscriptions = 1;
}
